Fixed spacing and content order

--- a/src/webview/main/style.css
+++ b/src/webview/main/style.css
@@ -41,7 +41,7 @@ p { margin: 0; line-height: 1.45; word-break: break-word; }
 
 .upn-tab { padding: 10px 20px; }
 .upn-tab-header { display: flex; border-bottom: 1px solid var(--vscode-panel-border); }
-.upn-tab-item { flex: 1; padding: 8px 16px; cursor: pointer; text-align: center; }
+.upn-tab-item { flex: 1; padding: 8px; cursor: pointer; text-align: center; }
 .upn-tab-item.is-active { border-bottom: 3px solid var(--vscode-focusBorder); }
 .upn-stat-count { display: inline-block; min-width: 16px; font-style: normal; padding: 1px 4px 2px; line-height: 1; background: var(--vscode-editor-background); border: 1px solid var(--vscode-panel-border); border-radius: 16px; }
 .upn-tab-contents { display: flex; }
@@ -81,5 +81,7 @@ p { margin: 0; line-height: 1.45; word-break: break-word; }
 .upn-button { display: inline-flex; justify-content: center; width: auto; padding: 4px 14px; margin:4px 0; white-space: nowrap; border: 1px solid var(--vscode-button-border, transparent); border-radius: 2px; box-sizing: border-box; color: var(--vscode-button-foreground); background-color: var(--vscode-button-background, transparent); cursor: pointer; line-height: 18px; text-decoration: none;  }
 .upn-button-ghost { background-color: transparent; border-color: var(--vscode-button-border, transparent); color: var(--vscode-button-foreground); }
 .upn-button-ghost:hover { background-color: var(--vscode-button-background, transparent); border-color: var(--vscode-button-border, transparent); color: var(--vscode-button-foreground); }
+
+.upn-rate-me { display:inline-block; margin-top: 1rem }
 
 .is-hidden { display: none; }
